--- a/01_Calculadora/style.css
+++ b/01_Calculadora/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Lucida Console', monospace;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-align: center;
     background-image: url('menina.jpeg');
     background-size: cover;
@@ -14,7 +14,7 @@ body {
   .container2 {
     color: white;
     font-size: 18px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-align: top;
   }
 
