--- a/06Tabeladeclassificação/style.css
+++ b/06Tabeladeclassificação/style.css
@@ -3,9 +3,9 @@
 }
 
 body {
-  font-family: "Roboto Mono", monospace;
+  font-family: "robo"
   min-height: 400px;
-  background-image: url("https://www.japanhousesp.com.br/sites/japanhouse.com.saopaulo/files/2021-02/Site.jpg");
+  background-image: url("https://verticaltennis.com.br/wp-content/uploads/2019/03/quadras-de-tenis-cobertas-back-4-1024x683.jpg");
   background-color: #111;
   background-size: 100%;
   background-position: center;
@@ -19,8 +19,8 @@ body {
 }
 
 .page-title {
-  color: #ffffff;
-  margin: 0 0 5px;
+  color: #FFFFFF;
+  margin: 2rem;
 }
 
 .page-subtitle {
@@ -30,45 +30,70 @@ body {
 
 .page-logo {
   width: 200px;
+  margin-top: 1rem;
 }
 
 .alura-logo {
   width: 40px;
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 30px;
+  right: 30px;
+}
+
+label {
+  color: #FFFFFF;
+}
+
+input, button {
+  padding: 0.5rem 1rem;
+  border-radius: 0.25rem;
+  border: none;
+}
+
+button {
+  color: #FFFFFF;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.btn-add {
+  background: #4CAF50;
+}
+
+.btn-delete {
+  background: #F44336;
+  display: end;
+  font-size: 0.65rem;
+}
+
+.btn-actions {
+  background: #e7e7e7;
+  color: #000;
+  padding: 0.25rem 0.75rem;
+  margin: 0.25rem 0;
+}
+
+.btn-actions-delete {
+  background: #F44336;
+  padding: 0.5rem 0.75rem;
+  margin: 0.25rem 0;
+  border-radius: 50%;
+}
+
+button:hover {
+  opacity: 0.9;
 }
 
 table {
   border: 2px solid white;
   border-collapse: collapse;
+  width: 100%;
+  margin: 2rem 0 1rem;
 }
 
-h1 {
+th, tr, td {
+  border: solid 2px white;
   color: white;
-}
-
-th,
-tr,
-td {
-  border: solid 1px white;
-  color: white;
-}
-
-#resetarFilme {
-  border: 40;
-  color: #da1e26;
-  background: #da1e26;
-  font-weight: bold;
-  padding: 10px 10px;
-  font-size: 20px;
-  border-radius: 4px;
-  margin-top: 30px;
-  cursor: pointer;
-  transition: 0.3s;
-}
-
-img {
-  max-width: 50px;
-  max-height: 50px;
+  margin: 10rem;
+  font-size: 16px;
 }
