--- a/03Mentalista/style.css
+++ b/03Mentalista/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: "Roboto Mono", monospace;
     min-height: 100px;
-    background-image: url("https://img.freepik.com/fotos-gratis/foto-isolada-de-um-motorista-masculino-bonito-e-feliz-em-uma-scooter-com-um-capacete-vermelho_273609-31424.jpg?w=1380");
+    background-image: url("https://as1.ftcdn.net/v2/jpg/03/13/47/78/1000_F_313477805_FjdtYLHA78oQBs4sYkPhVwNFDBotcCGi.jpg");
     background-color: #000000;
     background-size: cover;
     background-position: center bottom;
